# hermes

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
hermes/: __init__.py  agent.py  app.py  business.py  callbacks.py  dashboard.py  knowledge.py  models.py  payments.py  runtime.py  sample_business.py  store.py  tools.py  whatsapp.py
hermes/llm/: __init__.py  base.py  factory.py  mock.py  openai_compatible.py
hermes/mpesa/: __init__.py  base.py  daraja.py  factory.py  simulator.py
scripts/: seed_demo_data.py
tests/: test_agent.py  test_app.py  test_knowledge_and_tools.py  test_llm_factory.py  test_llm_mock.py  test_models.py  test_mpesa.py  test_store.py
