[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-agent"
version = "0.1.0"
description = "A WhatsApp AI commerce & support agent for African SMEs, with M-Pesa payment collection."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Lucas Maingi" }]
dependencies = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "pydantic>=2.5",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dashboard = ["streamlit>=1.30", "pandas>=2.0", "plotly>=5.15"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4"]

[tool.setuptools.packages.find]
include = ["hermes*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
